samples/_failures_safe/1761630934_09ca1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c9436983.c: In function ‘main’:
./samples/SAFE/__tmp_c9436983.c:173:9: error: expected declaration or statement at end of input
  173 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_c9436983.c:173:9: error: expected declaration or statement at end of input
